# datalake-lib

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
datalake_cdk/: README.md  app.py  pyproject.toml
datalake_cdk/datalake_cdk/: catalog.py
datalake_cdk/datalake_cdk/etl/: iam.py
datalake_cdk/datalake_cdk/storage/: assets.py  bucket.py  objects.py
datalake_lib/: pyproject.toml  python.py
datalake_lib/datalake_lib/etl/: arguments.py  iam.py  job.py  options.py  script.py  security.py
datalake_lib/datalake_lib/storage/: assets.py  bucket.py  objects.py
datalake_lib/etl/: arguments.py  iam.py  job.py  options.py  script.py  security.py
datalake_lib/storage/: assets.py  bucket.py  objects.py  uri.py
datalake_pulumi/: pyproject.toml
datalake_pulumi/datalake_pulumi/etl/: iam.py  job.py  script.py  security.py
datalake_pulumi/datalake_pulumi/storage/: assets.py  objects.py
glue_job_scripts/: demo_script.py  pyproject.toml
libs/demo_lib/: pyproject.toml
libs/demo_lib/demo_lib/: show.py
tests/storage/: test_s3_uri.py
