[tool.poetry]
name = "datalake-cdk"
version = "0.1.1"
description = ""
authors = ["Martijn Sturm <martijn.sturm@cloudnation.nl>"]
readme = "README.md"
packages = [{ include = "datalake_cdk" }]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.73.0"
constructs = "^10.1.306"
datalake-lib = { git = "https://github.com/Martijn-Sturm/datalake-lib.git", subdirectory = "datalake_lib" }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
poetry = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
