[tool.poetry]
name = "datalake-pulumi"
version = "0.1.0"
description = ""
authors = ["Martijn Sturm <martijn.sturm@cloudnation.nl>"]
readme = "README.md"
packages = [{ include = "datalake_pulumi" }]

[tool.poetry.dependencies]
python = "^3.10"
datalake-lib = { path = "../datalake_lib", develop = true }
pulumi = "^3.62.0"
poetry = "^1.4.2"
pulumi-aws = "^5.35.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
